--- a/AmazonClone.html
+++ b/AmazonClone.html
@@ -18,16 +18,7 @@
             <p class="add-first">Deliver to</p>
             <div class="add-icon">
     …
-h.html
-project.html
-tony1.jpg
-[9:50 PM, 7/8/2024] Amit: Did anybody upload PPT in the Google form mam has sent
-[9:50 PM, 7/8/2024] Preetham GCU: No
-[9:50 PM, 7/8/2024] Sachin GCU: I did
-[10:00 PM, 7/8/2024] Amit: Everybody's you did?
-[10:13 PM, 7/8/2024] Sachin GCU: S
-[10:23 PM, 7/8/2024] Amit: Okok
-[7:46 AM, 7/9/2024] Sachin GCU: <!DOCTYPE html>
+                <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
